// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigations can be created/edited/deleted: can be created 1`] = `
{
  "data": {
    "createNavigation": {
      "id": Any<String>,
      "key": Any<String>,
      "links": Any<Array>,
      "name": "Create Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be deleted 1`] = `
{
  "data": {
    "deleteNavigation": Any<Object>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be read by id 1`] = `
{
  "data": {
    "navigation": {
      "id": Any<String>,
      "key": Any<String>,
      "links": Any<Array>,
      "name": "Create Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Navigations can be created/edited/deleted: can be updated 1`] = `
{
  "data": {
    "updateNavigation": {
      "id": Any<String>,
      "key": Any<String>,
      "links": ArrayContaining [
        ObjectContaining {
          "label": "New External Label",
          "url": "newlinkurl.ch/",
        },
        ObjectContaining {
          "label": "New Page Label",
          "page": Any<Object>,
        },
        ObjectContaining {
          "article": Any<Object>,
          "label": "New Article Label",
        },
      ],
      "name": "Updated Navigation Name",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
